# crm-platform-aws

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  pytest.ini  requirements.txt
docker/: jenkins-terraform.Dockerfile
frontend/: app.js  aws-auth.js  index.html
scripts/: get_guest_credentials.py  test_post.py
src/handlers/: create_contact.py  delete_contact.py  get_contacts.py
src/models/: contact.py
src/services/: dynamodb_service.py
terraform/: api_gateway.tf  cognito.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  response.json  s3.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/lambda/: main.py
tests/: test_contact.py
tests/integration/: test_api_gateway.py
tests/unit/: test_contact.py  test_create_contact_lambda.py  test_dynamodb_service.py  test_get_contacts_lambda.py
